# llm_chat

./: .gitignore  README.md  chat.sh  config.json  env-SAMPLE  models_SAMPLE.json  pyproject.toml  start.sh
llm_client/: __main__.py  logger.py  main.py
scripts/: ask-many-local.sh  ask-many.sh  ask.sh  pull-models.sh
